--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^3.26.15",
+    "axios": "^0.19.2",
     "next": "^8.1.0",
     "next-redux-wrapper": "^5.0.0",
     "prop-types": "^15.7.2",
@@ -22,8 +23,11 @@
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "nodemon": "^2.0.3",
