--- a/front/package.json
+++ b/front/package.json
@@ -5,27 +5,37 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "next build",
-    "start": "next start"
+    "build": "cross-env BUNDLE_ANALYZE=both next build",
+    "prestart": "npm run build",
+    "start": "cross-env NODE_ENV=production next start"
   },
   "author": "LJH",
   "license": "MIT",
   "dependencies": {
+    "@zeit/next-bundle-analyzer": "^0.1.2",
     "antd": "^3.26.15",
     "axios": "^0.19.2",
+    "compression-webpack-plugin": "^4.0.0",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "immer": "^6.0.9",
+    "moment": "^2.26.0",
     "morgan": "^1.10.0",
     "next": "^8.1.0",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^4.4.1",
+    "webpack-ant-icon-loader": "^1.0.8"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
