--- a/front/package.json
+++ b/front/package.json
@@ -5,14 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "cross-env BUNDLE_ANALYZE=both next build",
+    "build": "cross-env ANALYZE=true next build",
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=production next start"
   },
   "author": "LJH",
   "license": "MIT",
   "dependencies": {
-    "@zeit/next-bundle-analyzer": "^0.1.2",
     "antd": "^3.26.15",
     "axios": "^0.19.2",
     "compression-webpack-plugin": "^4.0.0",
