--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "author": "LJH",
   "license": "MIT",
   "dependencies": {
+    "@next/bundle-analyzer": "^9.4.4",
     "antd": "^3.26.15",
     "axios": "^0.19.2",
     "compression-webpack-plugin": "^4.0.0",
